# light-renderer

./: CMakeLists.txt
client-cpp/: .clang-format  CMakeLists.txt
client-cpp/.cache/clangd/index/: Camera.cpp.5736C708DFDBC2C6.idx  Camera.h.AAB84276584EC2D5.idx  ClientUdp.cpp.C9DF201A34892EAC.idx  ClientUdp.h.78385EFE0B9DEA0D.idx  Cube.cpp.89A5293DD1E7DFDD.idx  Cube.h.A9F08C3B189A16DB.idx  Light.cpp.1F2C22616371C5B9.idx  Light.h.2CB4658C7B6AFCC4.idx  Material.cpp.B9F5BE8D915BFA7A.idx  Material.h.86860A6A9E4657F4.idx  Model.cpp.158F194B3C5B36E8.idx  Model.h.F6BDB363F71E598B.idx  NetClient.cpp.BA62A39372F95371.idx  NetClient.h.02E7E5EA6CEC122E.idx  Plane.cpp.07878481FDE41F2B.idx  Plane.h.DCFBF87FC9BB8314.idx  Player.cpp.4BA9E9FE1AE6B37C.idx  Player.h.7D81A1667F5BDC48.idx  Pyramid.cpp.E6ADAB974DD9DF95.idx  Pyramid.h.55F8AE76695CBAC7.idx  Shader.cpp.7EC17D737415FF07.idx  Shader.h.7053C8D666600617.idx  ShadowMap.cpp.E2CCFD326982CA9F.idx  ShadowMap.h.4E2BD987729A3A7E.idx  _fixes.hpp.5AE4039B5F1DEE2E.idx  _vectorize.hpp.775C7CB7F49ECFF3.idx  address.hpp.4F6D463B8E8F7073.idx  address.hpp.AE9BB3DAAA2A6DD2.idx  address.ipp.0F748C7B879033D6.idx  address_v4.hpp.AF3698F6A495537A.idx  address_v4.hpp.B1D5B347AC36C853.idx  address_v4.ipp.C1729646A25F9A97.idx  address_v4_iterator.hpp.9D7A118796965360.idx  address_v4_range.hpp.4FEB5A3DAA969918.idx  address_v6.hpp.962683625FD8C903.idx  address_v6.hpp.F442A401C3145D4D.idx  address_v6.ipp.1991460F207FC310.idx  address_v6_iterator.hpp.96189F0D44F46CCD.idx  address_v6_range.hpp.C106D6A447117083.idx  allocator.hpp.908757D2968C9307.idx  (+688 more)
client-cpp/assets/: vertex.glsl
client-cpp/libs/glad/: cmake_install.cmake
client-cpp/libs/glfw-3.4/: cmake_install.cmake  cmake_uninstall.cmake
client-cpp/libs/glfw-3.4/docs/: cmake_install.cmake
client-cpp/libs/glm/: cmake_install.cmake
client-cpp/src/: Camera.cpp  Camera.h  Material.cpp  Player.cpp  Player.h  ShadowMap.cpp  main.cpp
client-cpp/src/models/: Cube.cpp  Model.cpp  Model.h  Plane.cpp  Pyramid.h
client-cpp/src/net/: ClientUdp.cpp  ClientUdp.h
(+21 files in other folders)
